// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary Ts&Cs Snapshot comparison whatNext renders correctly (signedIn=false, ObserverSubscriptionCard list) 1`] = `
<div>
  <ol>
    <li
      class="css-k6etrx"
    >
      You should receive an email confirming the details of your subscription, and another email shortly afterwards that contains details of how you can pick up your newspapers from tomorrow.
    </li>
    <li
      class="css-k6etrx"
    >
      You will receive your Subscription Card in your subscriber pack in the post, along with your home delivery letter.
    </li>
    <li
      class="css-k6etrx"
    >
      Visit your chosen participating newsagent to pick up your newspaper using your Subscription Card, or arrange a home delivery using your delivery letter.
    </li>
    <li
      class="css-k6etrx"
    >
      <p>
        The Observer will be in touch shortly via email to welcome you. Check your spam folder or add the 
        <a
          href="https://www.observer.co.uk"
        >
          Observer.co.uk
        </a>
         domain to your preferred sender list. Log in to 
        <a
          href="https://www.observer.co.uk"
        >
          Observer.co.uk
        </a>
         or The Observer app now for full digital access.
      </p>
    </li>
  </ol>
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison whatNext renders correctly (signedIn=true, ObserverPaper list) 1`] = `
<div>
  <ol>
    <li
      class="css-k6etrx"
    >
      Look out for an email from The Guardian confirming your subscription. It has everything you need to know about how to manage your Observer digital & print subscription in the future.
    </li>
    <li
      class="css-k6etrx"
    >
      <p>
        The Observer will be in touch shortly via email to welcome you. Check your spam folder or add the 
        <a
          href="https://www.observer.co.uk"
        >
          Observer.co.uk
        </a>
         domain to your preferred sender list. Log in to 
        <a
          href="https://www.observer.co.uk"
        >
          Observer.co.uk
        </a>
         or The Observer app now for full digital access.
      </p>
    </li>
  </ol>
</div>
`;
